k8s/network-policies/minio.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-minio
spec:
  podSelector:
    matchLabels:
      app: minio
  policyTypes: [Ingress]
  ingress:
    # CNPG barman backups on S3 API
    - from:
        - podSelector:
            matchLabels:
              cnpg.io/cluster: postgres
      ports:
        - port: 9000
          protocol: TCP
