k8s/network-policies/users-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-users-api
spec:
  podSelector:
    matchLabels:
      app: users-api
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
        - podSelector:
            matchLabels:
              gateway.networking.k8s.io/gateway-name: demo-gateway
        - podSelector:
            matchLabels:
              app: frontend
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: lgtm
      ports:
        - port: 3000
          protocol: TCP
        - port: 15008
          protocol: TCP
